@@ -42,6 +42,8 @@ private:
     QCheckBox * m_selectNodeGroupByIntersectionCheckBox = nullptr;
 
     QCheckBox * m_autosaveCheckBox = nullptr;
+
+    QCheckBox * m_autoloadCheckBox = nullptr;
 };
 
 } // namespace Dialogs
